fixing alignwide style for images

--- a/resources/assets/sass/blocks/block-styles.scss
+++ b/resources/assets/sass/blocks/block-styles.scss
@@ -107,7 +107,10 @@ figure.alignfull img {
 .alignwide {
 	margin: 32px calc(25% - 25vw);
 	max-width: 100vw;
-	width: 100vw;
+	img {
+		max-width: 100%;
+		width: 100%;
+	}
 }
 @media (max-width: 920px) {
 	.alignwide {
